parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_call-5.snap
---
source: parser/src/parser/parser.rs
description: "func(a, b=c, d=e)"
---
Module {
    node: Node {
        start: 0,
        end: 17,
    },
    body: [
        ExpressionStatement(
            Call(
                Call {
                    node: Node {
                        start: 0,
                        end: 17,
                    },
                    func: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 4,
                            },
                            id: "func",
                        },
                    ),
                    args: [
                        Name(
                            Name {
                                node: Node {
                                    start: 5,
                                    end: 6,
                                },
                                id: "a",
                            },
                        ),
                    ],
                    keywords: [
                        Keyword {
                            node: Node {
                                start: 8,
                                end: 11,
                            },
                            arg: Some(
                                "b",
                            ),
                            value: Name(
                                Name {
                                    node: Node {
                                        start: 10,
                                        end: 11,
                                    },
                                    id: "c",
                                },
                            ),
                        },
                        Keyword {
                            node: Node {
                                start: 13,
                                end: 16,
                            },
                            arg: Some(
                                "d",
                            ),
                            value: Name(
                                Name {
                                    node: Node {
                                        start: 15,
                                        end: 16,
                                    },
                                    id: "e",
                                },
                            ),
                        },
                    ],
                    starargs: None,
                    kwargs: None,
                },
            ),
        ),
    ],
}
