parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_import_statement-11.snap
---
source: parser/src/parser/parser.rs
description: from ....a import b
---
Module {
    node: Node {
        start: 0,
        end: 19,
    },
    body: [
        ImportFrom(
            ImportFrom {
                node: Node {
                    start: 0,
                    end: 19,
                },
                module: "a",
                names: [
                    Alias {
                        node: Node {
                            start: 18,
                            end: 19,
                        },
                        name: "b",
                        asname: None,
                    },
                ],
                level: 4,
            },
        ),
    ],
}
