parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_import_statement-12.snap
---
source: parser/src/parser/parser.rs
description: from .....a import b
---
Module {
    node: Node {
        start: 0,
        end: 20,
    },
    body: [
        ImportFrom(
            ImportFrom {
                node: Node {
                    start: 0,
                    end: 20,
                },
                module: "a",
                names: [
                    Alias {
                        node: Node {
                            start: 19,
                            end: 20,
                        },
                        name: "b",
                        asname: None,
                    },
                ],
                level: 5,
            },
        ),
    ],
}
