parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_import_statement-15.snap
---
source: parser/src/parser/parser.rs
description: from ...
---
Module {
    node: Node {
        start: 0,
        end: 8,
    },
    body: [],
}
