parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_import_statement-2.snap
---
source: parser/src/parser/parser.rs
description: import a as b
---
Module {
    node: Node {
        start: 0,
        end: 13,
    },
    body: [
        Import(
            Import {
                node: Node {
                    start: 0,
                    end: 13,
                },
                names: [
                    Alias {
                        node: Node {
                            start: 7,
                            end: 13,
                        },
                        name: "a",
                        asname: Some(
                            "b",
                        ),
                    },
                ],
            },
        ),
    ],
}
