parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_import_statement-4.snap
---
source: parser/src/parser/parser.rs
description: import a.b as c
---
Module {
    node: Node {
        start: 0,
        end: 15,
    },
    body: [
        Import(
            Import {
                node: Node {
                    start: 0,
                    end: 15,
                },
                names: [
                    Alias {
                        node: Node {
                            start: 7,
                            end: 15,
                        },
                        name: "a.b",
                        asname: Some(
                            "c",
                        ),
                    },
                ],
            },
        ),
    ],
}
